--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,127 @@
 #root {
   /* max-width: 1280px; */
-  margin: 0 auto;
-  padding: 1rem;
+  /* margin: 0 auto; */
+  width: 100%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#main {
+  padding: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#connect-form {
+  display: flex;
+  flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#control-center {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  color: #c9d1d9;
+  background-color: #121212;
+  width:100%;
 }
 
-.card {
-  padding: 2em;
+header {
+  text-align: center;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border-bottom: 1px solid #333;
 }
 
-.read-the-docs {
-  color: #888;
+.layout {
+  display: flex;
+  flex-grow: 1;
+}
+
+#sidebar {
+  width: 250px;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border-right: 1px solid #333;
+}
+
+#controls {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px dashed orange;
+}
+
+#controls label {
+  display: block;
+  margin-top: 10px;
+}
+
+#data-display {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 1rem;
+  overflow: hidden;
+}
+
+.chart {
+  background-color: #222;
+  padding: 10px;
+  border-radius: 8px;
+  /* width: 100%; /* Ensure charts do not exceed container */
+  max-width: 800px; /* Set a reasonable max width */
+  min-width: 480px;
+  overflow: hidden;
+}
+
+.chart canvas {
+  width: 100% !important;
+  height: auto !important;
+  max-width: 100%;
+}
+
+#connect-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  border: 1px solid #333;
+}
+
+#connect-form form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 1;
+  gap: 10px;
+}
+
+#connect-form input {
+  flex-grow: 1;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  border-radius: 6px;
+  background-color: #222;
+  color: #c9d1d9;
+  transition: border-color 0.2s;
+}
+
+#connect-form input:focus {
+  border-color: #646cff;
+  outline: none;
+}
+
+#connect-form .btn-primary,
+#connect-form .btn-secondary {
+  width: 100%;
+  text-align: center;
+}
+
+.input-connected {
+  border: 1px solid #3a7d44; /* Green border */
+  box-shadow: 0px 0px 5px 2px #3a7d44;
+}
+
+.input-disconnected {
+  border: 1px solid #8b3a3a; /* Red border */
 }
