Added scaling controls for fft.

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@ header {
   max-width: 100%;
 }
 
+.chart-controls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 #connect-form {
   display: flex;
   flex-direction: column;
@@ -126,6 +132,9 @@ header {
   border: 1px solid #8b3a3a; /* Red border */
 }
 
-.vertical-slider {
+input[type="range"] {
+  writing-mode: vertical-lr;
   transform: rotate(180deg);
+  height: 200px;
+  padding: 0px;
 }
