--- a/src/FFTData.css
+++ b/src/FFTData.css
@@ -15,3 +15,22 @@
     border-radius: 6px;
     padding-left: 20px;
 }
+
+.data-table {
+    width: 100%;
+    border-collapse: collapse;
+    /* border: 1px solid #333;
+    border-radius: 6px; */
+    text-align: left;
+    table-layout: fixed;
+}
+
+.data-header {
+    background-color: #1a1a1a;
+    font-weight: bold;
+}
+
+.data-cell {
+    border-top: 1px solid #333;
+    padding: 8px;
+}
