--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,19 @@ input[type="range"] {
   height: 200px;
   padding: 0px;
 }
+
+select {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  transition: border-color 0.25s;
+}
+
+select:hover {
+  border-color: #646cff;
+}
+
