--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 
 input {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid darkslategray;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
