--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 0.95);
   background-color: #242424;
 
   font-synthesis: none;
@@ -15,7 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  /* color: #646cff; */
   text-decoration: inherit;
 }
 a:hover {
@@ -56,12 +56,12 @@ button:focus-visible {
 
 input {
   border-radius: 8px;
-  border: 1px solid darkslategray;
+  border: 1px solid rgb(39, 39, 42);
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 0.875em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgb(9,9,1);
   transition: border-color 0.25s;
 }
 
@@ -69,11 +69,16 @@ input:hover {
   border-color: #646cff;
 }
 
+input:focus {
+  border-color: #646cff;
+  outline: none;
+}
+
 .btn-primary {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 0.875em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a; /* Same dark background */
@@ -91,7 +96,7 @@ input:hover {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 0.875em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a; /* Same dark background */
