--- a/src/old/App.css
+++ b/src/old/App.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  color: #c9d1d9;
+  /* color: #c9d1d9; */
   background-color: #121212;
   width:100%;
 }
