--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
+  border: 1px solid rgb(39, 39, 42);
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -51,7 +52,7 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /* outline: 4px auto -webkit-focus-ring-color; */
 }
 
 input {
@@ -74,14 +75,28 @@ input:focus {
   outline: none;
 }
 
-.btn-primary {
+select {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid rgb(39, 39, 42);
   padding: 0.6em 1.2em;
   font-size: 0.875em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a; /* Same dark background */
+  background-color: rgb(9,9,1);
+  transition: border-color 0.25s;
+}
+
+select:hover {
+  border-color: #646cff;
+}
+
+.btn-primary {
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-size: 0.875em;
+  font-weight: 500;
+  font-family: inherit;
+  /* background-color: #1a1a1a; /* Same dark background */
   color: #c9d1d9; /* Soft, off-white text */
   cursor: pointer;
   transition: background-color 0.25s, border-color 0.25s;
@@ -94,7 +109,6 @@ input:focus {
 
 .btn-secondary {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 0.875em;
   font-weight: 500;
@@ -108,6 +122,10 @@ input:focus {
 .btn-secondary:hover {
   border-color: #d32f2f;
   background-color: #222; /* Slightly lighter on hover */
+}
+
+main {
+  flex-grow: 1;
 }
 
 @media (prefers-color-scheme: light) {
