--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,10 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
+/* button:focus,
 button:focus-visible {
-  /* outline: 4px auto -webkit-focus-ring-color; */
-}
+  outline: 4px auto -webkit-focus-ring-color;
+} */
 
 input {
   border-radius: 8px;
@@ -88,6 +88,11 @@ select {
 
 select:hover {
   border-color: #646cff;
+}
+
+select:focus {
+  border-color: #646cff;
+  outline: none;
 }
 
 .btn-primary {
