--- a/src/pages/FFTPage.css
+++ b/src/pages/FFTPage.css
@@ -1,11 +1,16 @@
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .chart-section {
     grid-column: 1 / 3;
-    grid-row: 1 / 4;
-    background-color: rgb(9, 9, 11);
+    grid-row: 1 / 3;
+}
+
+.data-display {
+    background-color: #18181A;
+    box-shadow: 0px 0px 2px 1px #646cff;
+    padding: 8px;
 }
