--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -7,6 +7,12 @@
     flex-grow: 0;
     min-width: 240px;
     border-right: 1px solid rgb(39, 39, 42);
+    /* border-right: 1px solid red; */
+    /* box-shadow: 1px 0px 1px 1px #8b3a3a; */
+}
+.sidebar.connected {
+    /* border-right: 1px solid rgb(123, 182, 35); */
+    /* box-shadow: 1px 0px 2px 1px green; */
 }
 
 .sidebar-content {
@@ -89,7 +95,7 @@ input {
 }
 
 .input-connected {
-    border: 1px solid #3a7d44; /* Green border */
+    border: 1px solid rgb(123, 182, 35); /* Green border */
     box-shadow: 0px 0px 5px 2px #3a7d44;
 }
   
