--- a/src/index.css
+++ b/src/index.css
@@ -35,21 +35,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: transparent;
-  border: 1px solid rgb(39, 39, 42);
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
+
 /* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -94,6 +80,21 @@ select:focus {
   border-color: #646cff;
   outline: none;
 }
+button {
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-size: 0.875em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: #c9d1d9;
+  border: 1px solid rgb(39, 39, 42);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
 
 .btn-primary {
   border-radius: 8px;
@@ -101,7 +102,7 @@ select:focus {
   font-size: 0.875em;
   font-weight: 500;
   font-family: inherit;
-  /* background-color: #1a1a1a; /* Same dark background */
+  background-color: #1a1a1a; /* Same dark background
   color: #c9d1d9; /* Soft, off-white text */
   cursor: pointer;
   transition: background-color 0.25s, border-color 0.25s;
