--- a/src/pages/FFTPage.css
+++ b/src/pages/FFTPage.css
@@ -9,4 +9,59 @@ main {
     background-color: #18181A;
     box-shadow: 0px 0px 2px 1px #646cff;
     padding: 8px;
+    overflow-y: auto;
+}
+
+.signal-card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid rgb(39, 39, 42);
+    flex-shrink: 1;
+    column-gap: 8px;
+    padding: 4px 8px 4px 8px;
+    width: auto;
+}
+
+.signal-card.new {
+    border: 1px solid #646cff;
+    box-shadow: 0px 0px 2px #646cff;
+}
+
+.signal-card.active {
+    background-color: rgb(39, 39, 42);
+}
+
+p {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    font-size: 12px;
+    font-weight: 600;;
+}
+
+.detected-signals {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 4px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid rgb(39, 39, 42);
+}
+
+.snr-select {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    column-gap: 8px;
+    margin-bottom: 8px;
+}
+
+.snr-select input {
+    width: 3rem;
+    font-size: 12px;
+    padding: 6px;
+    background-color: transparent;
+    text-align: center;
 }
