--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -17,6 +17,10 @@
 
 .sidebar-content {
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 
 .sidebar-title {
@@ -52,6 +56,8 @@ h2.sidebar-title {
     width: 100%;
     row-gap: 4px;
     align-items: start;
+    flex-grow: 1;
+    overflow-y: auto
 }
 
 .nav-link {
@@ -120,5 +126,6 @@ option {
 }
 
 .controls {
+    flex-grow: 1;
     overflow-y: auto
 }
